Spring6 upgrade