@@ -3,7 +3,6 @@ package org.opengroup.osdu.crs.middleware;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.opengroup.osdu.core.common.entitlements.EntitlementsAPIConfig;
 import org.opengroup.osdu.core.common.entitlements.EntitlementsFactory;
-import org.opengroup.osdu.core.common.entitlements.IEntitlementsFactory;
 import org.opengroup.osdu.core.common.entitlements.IEntitlementsService;
 import org.opengroup.osdu.core.common.http.json.HttpResponseBodyMapper;
 import org.opengroup.osdu.core.common.logging.JaxRsDpsLog;
@@ -19,10 +18,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.servlet.HandlerExceptionResolver;
 
-import javax.annotation.PostConstruct;
-import javax.inject.Inject;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.annotation.PostConstruct;
+import jakarta.inject.Inject;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.util.Collections;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -55,19 +54,19 @@ public class AuthenticationService {
         IEntitlementsService service = entitlementsFactory.create(dpsHeaders);
         try {
             Groups groups = service.getGroups();
-            String message = String.format("User authenticated | User: %s", groups.getMemberEmail());
+            String message = "User authenticated | User: %s".formatted(groups.getMemberEmail());
             logger.info(message);
             putAuthenticationIntoContext(groups);
             httpServletResponse.addHeader(DpsHeaders.CORRELATION_ID, dpsHeaders.getCorrelationId());
         } catch (EntitlementsException e) {
-            String message = String.format(String.format("User not authenticated. Response: %s", e.getHttpResponse()), e);
+            String message = "User not authenticated. Response: %s".formatted(e.getHttpResponse()).formatted(e);
             logger.warning(message);
             AppException unauthorized =  AppException.createUnauthorized("Error: " + e.getMessage());
             handlerExceptionResolver.resolveException(httpServletRequest, httpServletResponse, null, unauthorized);
             return false;
         }
         catch (NullPointerException e) { // Common library throws null pointer exception when auth permission is denied.
-            String message = String.format("User not authenticated. Null pointer exception: %s", e.getMessage());
+            String message = "User not authenticated. Null pointer exception: %s".formatted(e.getMessage());
             logger.warning(message);
             AppException unauthorized = AppException.createUnauthorized("Error: " + e.getMessage());
             handlerExceptionResolver.resolveException(httpServletRequest, httpServletResponse, null, unauthorized);
